feature(api, entity-management, libs): Rename plotOfLands to plotsOfLand
Closes FOR-475
